# csv_terraform_sql_convetor

./: .gitignore  README.md  pyproject.toml
csv_bigquery_generator/: __init__.py
examples/: sample_metadata.csv
src/csv_bigquery_generator/: __init__.py  cli.py  models.py  parser.py  renderers.py
tests/: test_generation.py
